#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids)
#add_subdirectory(spaceinvaders)
#add_subdirectory(loadmodel)
#add_subdirectory(lookat)
#add_subdirectory(viewer1)
add_subdirectory(starfield)